Removes docs directory

--- a/.gitignore
+++ b/.gitignore
@@ -4,31 +4,25 @@
 .Rdata
 .Ruserdata
 .Rapp.history
-
 # OAuth tokens and caches
 .httr-oauth
 .cache/
-
 # macOS system files
 .DS_Store
-
 # R package and build files
 .Rbuildignore
 docs/            # pkgdown or other generated docs
 inst/doc/
 /Meta/           # Metadata from package builds
 *.tar.gz         # Package archives
-
 # Large media and data files
 *.tiff
 *.jpg
 *.png
 *.xls
-
 # Ignoring directories specific to project
 mock_data_test/
 custom_directory/
-
 # Logs and temporary files
 *.log
 *.out
@@ -36,10 +30,10 @@ custom_directory/
 *.bak
 *~
 *.tmp
-
 # Compiled documentation and data artifacts
 man/*.Rd
 vignettes/*.html
 vignettes/*.pdf
 _site/
 _site_libs/
+docs
