--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
 importFrom(dplyr,sample_frac)
+importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,slice)
@@ -112,7 +113,6 @@ importFrom(dplyr,ungroup)
 importFrom(dplyr,where)
 importFrom(easyr,read.any)
 importFrom(emmeans,emmeans)
-importFrom(exploratory,sample_rows)
 importFrom(exploratory,statecode)
 importFrom(fs,dir_create)
 importFrom(fs,dir_exists)
