--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,6 @@ export(create_line_plot)
 export(create_region_map)
 export(create_scatter_plot)
 export(determine_direction)
-export(fit_mixed_model_with_logging)
 export(fit_poisson_models)
 export(format_pct)
 export(genderize_physicians)
@@ -48,14 +47,20 @@ export(phase0_city_state_assign_scenarios)
 export(phase0_city_state_check_specialty_generalist_counts)
 export(phase0_city_state_sample_specialists)
 export(phase0_create_sampled_by_region)
+export(phase0_search_npi_by_number)
 export(physician_age)
 export(plot_and_save_emmeans)
 export(prepare_dataset)
 export(remove_constant_vars)
 export(remove_near_zero_var)
+export(results_section_analysis_household_income)
+export(results_section_exclusions)
+export(results_section_fit_mixed_model_with_logging)
 export(results_section_medicaid_summary)
+export(results_section_physician_by_household_income)
 export(results_section_summarize_common_provider_info)
 export(results_section_wait_time_median_stats)
+export(results_section_wait_time_poisson_estimates)
 export(retrieve_clinician_data)
 export(save_quality_check_table)
 export(search_and_process_npi)
@@ -73,10 +78,12 @@ import(ggplot2)
 import(glue)
 import(logger)
 import(maps)
+import(zipcodeR)
 importFrom(arsenal,tableby)
 importFrom(arsenal,write2pdf)
 importFrom(arsenal,write2word)
-importFrom(beepr,beep)
+importFrom(broom,tidy)
+importFrom(broom.mixed,tidy)
 importFrom(caret,nearZeroVar)
 importFrom(censusapi,getCensus)
 importFrom(data.table,rbindlist)
@@ -86,13 +93,13 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,count)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
-importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
@@ -173,10 +180,15 @@ importFrom(grDevices,png)
 importFrom(grDevices,tiff)
 importFrom(hereR,isoline)
 importFrom(hereR,set_key)
+importFrom(httr,POST)
+importFrom(httr,content)
+importFrom(httr,status_code)
 importFrom(janitor,clean_names)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(lifecycle,deprecated)
 importFrom(lme4,glmer)
-importFrom(lmerTest,lmer)
+importFrom(lme4,lmer)
 importFrom(logger,appender_file)
 importFrom(logger,log_appender)
 importFrom(logger,log_debug)
@@ -193,7 +205,6 @@ importFrom(npi,npi_search)
 importFrom(openxlsx,write.xlsx)
 importFrom(progress,progress_bar)
 importFrom(provider,clinicians)
-importFrom(purrr,flatten_chr)
 importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
@@ -209,7 +220,7 @@ importFrom(rlang,.data)
 importFrom(rlang,sym)
 importFrom(rnaturalearth,ne_countries)
 importFrom(rnaturalearth,ne_states)
-importFrom(robustlmm,rlmer)
+importFrom(scales,comma)
 importFrom(sf,read_sf)
 importFrom(sf,sf_use_s2)
 importFrom(sf,st_as_sf)
@@ -224,9 +235,11 @@ importFrom(sf,st_write)
 importFrom(stats,IQR)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
+importFrom(stats,confint.default)
+importFrom(stats,formula)
 importFrom(stats,glm)
 importFrom(stats,median)
-importFrom(stats,pnorm)
+importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,shapiro.test)
 importFrom(stringr,regex)
@@ -239,6 +252,7 @@ importFrom(stringr,str_to_lower)
 importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
 importFrom(tibble,tibble)
+importFrom(tidycensus,get_acs)
 importFrom(tidyr,spread)
 importFrom(tidyr,unnest)
 importFrom(tidyr,unnest_wider)
