--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(phase0_city_state_assign_scenarios)
 export(phase0_city_state_check_specialty_generalist_counts)
 export(phase0_city_state_sample_specialists)
 export(phase0_create_sampled_by_region)
+export(phase0_national_downloadable_file)
 export(phase0_search_npi_by_number)
 export(physician_age)
 export(plot_and_save_emmeans)
