--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,8 @@ export(create_scatter_plot)
 export(determine_direction)
 export(fit_poisson_models)
 export(format_pct)
-export(genderize_physicians)
 export(generate_interaction_sentences)
 export(generate_latex_equation)
-export(geocode_unique_addresses)
 export(get_census_data)
 export(honeycomb_generate_maps)
 export(hrr)
@@ -47,7 +45,10 @@ export(phase0_city_state_assign_scenarios)
 export(phase0_city_state_check_specialty_generalist_counts)
 export(phase0_city_state_sample_specialists)
 export(phase0_create_sampled_by_region)
+export(phase0_genderize_physicians)
+export(phase0_geocode)
 export(phase0_national_downloadable_file)
+export(phase0_search_batch_npi)
 export(phase0_search_npi_by_number)
 export(physician_age)
 export(plot_and_save_emmeans)
@@ -63,10 +64,9 @@ export(results_section_summarize_common_provider_info)
 export(results_section_wait_time_median_stats)
 export(results_section_wait_time_poisson_estimates)
 export(retrieve_clinician_data)
+export(save_plot)
 export(save_quality_check_table)
 export(search_and_process_npi)
-export(search_batch_npi)
-export(search_by_taxonomy)
 export(search_npi)
 export(split_calls_to_lab_assistants_and_save_by_priority)
 export(states_where_physicians_were_NOT_contacted)
@@ -181,12 +181,7 @@ importFrom(grDevices,png)
 importFrom(grDevices,tiff)
 importFrom(hereR,isoline)
 importFrom(hereR,set_key)
-importFrom(httr,POST)
-importFrom(httr,content)
-importFrom(httr,status_code)
 importFrom(janitor,clean_names)
-importFrom(jsonlite,fromJSON)
-importFrom(jsonlite,toJSON)
 importFrom(lifecycle,deprecated)
 importFrom(lme4,glmer)
 importFrom(lme4,lmer)
@@ -210,7 +205,7 @@ importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_chr)
-importFrom(purrr,map_df)
+importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfc)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
@@ -249,7 +244,6 @@ importFrom(stringr,str_detect)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_squish)
-importFrom(stringr,str_to_lower)
 importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
 importFrom(tibble,tibble)
