--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,6 @@ export(linear_regression_race_drive_time_generate_summary_sentence)
 export(load_data)
 export(logistic_regression)
 export(map_physicians_by_group)
-export(nppes_connect_to_duckdb)
-export(nppes_disconnect_from_duckdb)
 export(nppes_get_data_for_one_year)
 export(phase0_city_state_assign_scenarios)
 export(phase0_city_state_check_specialty_generalist_counts)
@@ -181,7 +179,13 @@ importFrom(grDevices,png)
 importFrom(grDevices,tiff)
 importFrom(hereR,isoline)
 importFrom(hereR,set_key)
+importFrom(httr,POST)
+importFrom(httr,accept)
+importFrom(httr,content)
+importFrom(httr,status_code)
 importFrom(janitor,clean_names)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(lifecycle,deprecated)
 importFrom(lme4,glmer)
 importFrom(lme4,lmer)
