--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,7 +76,6 @@ import(dplyr)
 import(ggplot2)
 import(glue)
 import(logger)
-import(maps)
 import(zipcodeR)
 importFrom(arsenal,tableby)
 importFrom(arsenal,write2pdf)
@@ -117,7 +116,6 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,where)
-importFrom(easyr,read.any)
 importFrom(emmeans,emmeans)
 importFrom(exploratory,statecode)
 importFrom(fs,dir_create)
@@ -216,6 +214,7 @@ importFrom(purrr,map_int)
 importFrom(readr,read_csv)
 importFrom(readr,read_rds)
 importFrom(readr,write_csv)
+importFrom(readxl,read_excel)
 importFrom(rlang,.data)
 importFrom(rlang,sym)
 importFrom(rnaturalearth,ne_countries)
@@ -255,6 +254,7 @@ importFrom(tidycensus,get_acs)
 importFrom(tidyr,spread)
 importFrom(tidyr,unnest)
 importFrom(tidyr,unnest_wider)
+importFrom(tools,file_ext)
 importFrom(tools,toTitleCase)
 importFrom(utils,head)
 importFrom(utils,write.csv)
