--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,14 +76,13 @@ import(dplyr)
 import(ggplot2)
 import(glue)
 import(logger)
-import(zipcodeR)
 importFrom(arsenal,tableby)
 importFrom(arsenal,write2pdf)
 importFrom(arsenal,write2word)
+importFrom(beepr,beep)
 importFrom(broom,tidy)
 importFrom(broom.mixed,tidy)
 importFrom(caret,nearZeroVar)
-importFrom(censusapi,getCensus)
 importFrom(data.table,rbindlist)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,all_of)
@@ -94,22 +93,27 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
 importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_at)
+importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
 importFrom(dplyr,sample_frac)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,slice)
+importFrom(dplyr,slice_head)
 importFrom(dplyr,slice_max)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarise)
@@ -169,9 +173,6 @@ importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,theme_void)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
-importFrom(ggspatial,annotation_north_arrow)
-importFrom(ggspatial,annotation_scale)
-importFrom(ggspatial,north_arrow_fancy_orienteering)
 importFrom(glue,glue)
 importFrom(grDevices,png)
 importFrom(grDevices,tiff)
@@ -179,9 +180,9 @@ importFrom(hereR,isoline)
 importFrom(hereR,set_key)
 importFrom(httr,POST)
 importFrom(httr,accept)
+importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,status_code)
-importFrom(janitor,clean_names)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(lifecycle,deprecated)
@@ -200,7 +201,6 @@ importFrom(methods,is)
 importFrom(npi,npi_flatten)
 importFrom(npi,npi_is_valid)
 importFrom(npi,npi_search)
-importFrom(openxlsx,write.xlsx)
 importFrom(progress,progress_bar)
 importFrom(provider,clinicians)
 importFrom(purrr,keep)
@@ -213,6 +213,7 @@ importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(readr,read_csv)
 importFrom(readr,read_rds)
+importFrom(readr,type_convert)
 importFrom(readr,write_csv)
 importFrom(readxl,read_excel)
 importFrom(rlang,.data)
@@ -234,19 +235,28 @@ importFrom(sf,st_write)
 importFrom(stats,IQR)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
+importFrom(stats,confint)
 importFrom(stats,confint.default)
 importFrom(stats,formula)
 importFrom(stats,glm)
+importFrom(stats,lm)
 importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,poisson)
 importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(stats,shapiro.test)
 importFrom(stringr,regex)
 importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_remove)
 importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_squish)
+importFrom(stringr,str_to_lower)
 importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
 importFrom(tibble,tibble)
@@ -257,6 +267,8 @@ importFrom(tidyr,unnest_wider)
 importFrom(tools,file_ext)
 importFrom(tools,toTitleCase)
 importFrom(utils,head)
+importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
 importFrom(utils,write.csv)
 importFrom(viridis,scale_fill_viridis)
 importFrom(viridis,viridis)
