Improving datasets availability.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ importFrom(dplyr,slice_max)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
+importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,where)
 importFrom(emmeans,emmeans)
@@ -237,7 +238,6 @@ importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,confint)
 importFrom(stats,confint.default)
-importFrom(stats,formula)
 importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,median)
