getting this thing ready for check() perfection.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(fit_poisson_models)
 export(format_pct)
 export(generate_interaction_sentences)
 export(generate_latex_equation)
+export(generate_overall_table)
 export(get_census_data)
 export(honeycomb_generate_maps)
 export(hrr)
