--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,24 +7,27 @@ export(arsenal_tables_write2word)
 export(calcpercentages)
 export(calculate_descriptive_stats)
 export(calculate_distribution)
+export(calculate_population_in_isochrones_by_race)
 export(calculate_proportion)
 export(check_normality)
 export(clean_npi_entries)
-export(clean_phase_1_results)
 export(clean_phase_2_data)
 export(convert_list_to_df_expanded)
 export(count_physicians_by_group)
 export(count_unique_physicians)
 export(create_and_plot_interaction)
+export(create_bar_plot)
 export(create_density_plot)
 export(create_dot_plot)
 export(create_forest_plot)
 export(create_formula)
+export(create_histogram_plot)
 export(create_insurance_by_insurance_scatter_plot)
 export(create_line_plot)
 export(create_region_map)
 export(create_scatter_plot)
 export(determine_direction)
+export(fetch_population_data)
 export(fit_poisson_models)
 export(format_pct)
 export(generate_interaction_sentences)
@@ -49,42 +52,41 @@ export(phase0_geocode)
 export(phase0_national_downloadable_file)
 export(phase0_search_batch_npi)
 export(phase0_search_npi_by_number)
+export(phase0_split_calls_to_lab_assistants_and_save_by_priority)
+export(phase2_sample_surgeons)
 export(physician_age)
 export(plot_and_save_emmeans)
+export(plot_region_counts)
 export(prepare_dataset)
 export(remove_constant_vars)
 export(remove_near_zero_var)
+export(result_section_pairwise_difference)
 export(results_section_analysis_household_income)
 export(results_section_exclusions)
-export(results_section_fit_mixed_model_with_logging)
 export(results_section_medicaid_summary)
 export(results_section_physician_by_household_income)
+export(results_section_poisson_overdispersion_testing)
 export(results_section_summarize_common_provider_info)
 export(results_section_wait_time_median_stats)
 export(results_section_wait_time_poisson_estimates)
 export(retrieve_clinician_data)
 export(save_plot)
 export(save_quality_check_table)
-export(search_and_process_npi)
 export(search_npi)
-export(split_calls_to_lab_assistants_and_save_by_priority)
 export(states_where_physicians_were_NOT_contacted)
 export(tm_write2pdf)
 export(validate_and_remove_invalid_npi)
 export(write_output_csv)
-import(beepr)
 import(dplyr)
+import(effects)
+import(genderdata)
 import(ggplot2)
 import(glue)
 import(logger)
+import(tigris)
 importFrom(arsenal,tableby)
 importFrom(arsenal,write2pdf)
 importFrom(arsenal,write2word)
-importFrom(beepr,beep)
-importFrom(broom,tidy)
-importFrom(broom.mixed,tidy)
-importFrom(caret,nearZeroVar)
-importFrom(data.table,rbindlist)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
@@ -94,27 +96,22 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
 importFrom(dplyr,distinct)
-importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
-importFrom(dplyr,group_by_at)
-importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_all)
 importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
+importFrom(dplyr,recode)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
-importFrom(dplyr,sample_frac)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
 importFrom(dplyr,slice)
-importFrom(dplyr,slice_head)
 importFrom(dplyr,slice_max)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarise)
@@ -158,7 +155,6 @@ importFrom(ggplot2,scale_color_identity)
 importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_fill_viridis_c)
-importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,scale_x_sqrt)
@@ -206,7 +202,6 @@ importFrom(progress,progress_bar)
 importFrom(provider,clinicians)
 importFrom(purrr,keep)
 importFrom(purrr,map)
-importFrom(purrr,map2)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfc)
@@ -214,17 +209,16 @@ importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
 importFrom(readr,read_csv)
 importFrom(readr,read_rds)
-importFrom(readr,type_convert)
 importFrom(readr,write_csv)
 importFrom(readxl,read_excel)
 importFrom(rlang,.data)
 importFrom(rlang,sym)
-importFrom(rnaturalearth,ne_countries)
-importFrom(rnaturalearth,ne_states)
 importFrom(scales,comma)
 importFrom(sf,read_sf)
 importFrom(sf,sf_use_s2)
+importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_geometry)
 importFrom(sf,st_intersection)
 importFrom(sf,st_join)
 importFrom(sf,st_make_grid)
@@ -238,22 +232,24 @@ importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,confint)
 importFrom(stats,confint.default)
+importFrom(stats,df.residual)
 importFrom(stats,glm)
+importFrom(stats,kruskal.test)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,pchisq)
 importFrom(stats,poisson)
 importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,residuals)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,shapiro.test)
 importFrom(stringr,regex)
 importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
-importFrom(stringr,str_remove)
 importFrom(stringr,str_remove_all)
-importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_squish)
 importFrom(stringr,str_to_lower)
@@ -261,6 +257,7 @@ importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
 importFrom(tibble,tibble)
 importFrom(tidycensus,get_acs)
+importFrom(tidyr,expand_grid)
 importFrom(tidyr,spread)
 importFrom(tidyr,unnest)
 importFrom(tidyr,unnest_wider)
