Changes to tyler package.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(create_line_plot)
 export(create_region_map)
 export(create_scatter_plot)
 export(determine_direction)
+export(diagnose_mixed_effects_model)
 export(fetch_population_data)
 export(fit_poisson_models)
 export(format_pct)
@@ -88,6 +89,7 @@ importFrom(arsenal,tableby)
 importFrom(arsenal,write2pdf)
 importFrom(arsenal,write2word)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
@@ -185,6 +187,7 @@ importFrom(jsonlite,toJSON)
 importFrom(lifecycle,deprecated)
 importFrom(lme4,glmer)
 importFrom(lme4,lmer)
+importFrom(logger,INFO)
 importFrom(logger,appender_file)
 importFrom(logger,log_appender)
 importFrom(logger,log_debug)
@@ -246,6 +249,7 @@ importFrom(stats,residuals)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,shapiro.test)
+importFrom(stats,var)
 importFrom(stringr,regex)
 importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
