--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.xlsx filter=lfs diff=lfs merge=lfs -text
 *.shp filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.shp.gz filter=lfs diff=lfs merge=lfs -text
