--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.shp filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.shp.gz filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
