--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 License: MIT + file LICENSE
-URL: https://mufflyt.github.io/tyler/
+URL: https://mufflyt.github.io/tyler/mysteryshopper
+BugReports: https://github.com/mufflyt/tyler/issues
 Date: 2023-09-11
 Keywords: healthcare, patient access, audit study, NPI, mystery caller
 Maintainer: Tyler Muffly <tyler.muffly@dhha.org>
