--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,14 +70,15 @@ export(results_section_poisson_overdispersion_testing)
 export(results_section_summarize_common_provider_info)
 export(results_section_wait_time_median_stats)
 export(results_section_wait_time_poisson_estimates)
-export(retrieve_clinician_data)
 export(save_plot)
 export(save_quality_check_table)
 export(search_npi)
 export(states_where_physicians_were_NOT_contacted)
 export(tm_write2pdf)
 export(validate_and_remove_invalid_npi)
+export(validate_and_retrieve_clinician_data)
 export(write_output_csv)
+import(assertthat)
 import(dplyr)
 import(effects)
 import(genderdata)
@@ -88,6 +89,15 @@ import(tigris)
 importFrom(arsenal,tableby)
 importFrom(arsenal,write2pdf)
 importFrom(arsenal,write2word)
+importFrom(assertthat,assert_that)
+importFrom(assertthat,has_name)
+importFrom(assertthat,is.dir)
+importFrom(assertthat,is.flag)
+importFrom(assertthat,is.number)
+importFrom(assertthat,is.readable)
+importFrom(assertthat,is.string)
+importFrom(assertthat,noNA)
+importFrom(censusapi,getCensus)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
@@ -121,6 +131,8 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,where)
+importFrom(duckdb,dbConnect)
+importFrom(duckdb,dbDisconnect)
 importFrom(emmeans,emmeans)
 importFrom(fs,dir_create)
 importFrom(fs,dir_exists)
@@ -129,7 +141,6 @@ importFrom(ggmap,geocode)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,after_stat)
-importFrom(ggplot2,annotate)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
@@ -159,7 +170,6 @@ importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_x_log10)
-importFrom(ggplot2,scale_x_sqrt)
 importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,scale_y_sqrt)
 importFrom(ggplot2,stat_qq)
@@ -173,8 +183,6 @@ importFrom(ggplot2,theme_void)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
-importFrom(grDevices,png)
-importFrom(grDevices,tiff)
 importFrom(hereR,isoline)
 importFrom(hereR,set_key)
 importFrom(httr,POST)
@@ -214,7 +222,6 @@ importFrom(readr,read_csv)
 importFrom(readr,read_rds)
 importFrom(readr,write_csv)
 importFrom(readxl,read_excel)
-importFrom(rlang,.data)
 importFrom(rlang,sym)
 importFrom(scales,comma)
 importFrom(sf,read_sf)
@@ -267,7 +274,6 @@ importFrom(tidyr,unnest)
 importFrom(tidyr,unnest_wider)
 importFrom(tools,file_ext)
 importFrom(tools,toTitleCase)
-importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,write.csv)
