--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,6 @@ export(results_section_analysis_household_income)
 export(results_section_exclusions)
 export(results_section_medicaid_summary)
 export(results_section_physician_by_household_income)
-export(results_section_poisson_overdispersion_testing)
 export(results_section_summarize_common_provider_info)
 export(results_section_wait_time_median_stats)
 export(results_section_wait_time_poisson_estimates)
@@ -85,7 +84,6 @@ import(genderdata)
 import(ggplot2)
 import(glue)
 import(logger)
-import(tigris)
 importFrom(arsenal,tableby)
 importFrom(arsenal,write2pdf)
 importFrom(arsenal,write2word)
@@ -183,11 +181,8 @@ importFrom(ggplot2,theme_void)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
-importFrom(hereR,isoline)
-importFrom(hereR,set_key)
 importFrom(httr,POST)
 importFrom(httr,accept)
-importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,status_code)
 importFrom(jsonlite,fromJSON)
@@ -236,7 +231,6 @@ importFrom(sf,st_read)
 importFrom(sf,st_sf)
 importFrom(sf,st_transform)
 importFrom(sf,st_union)
-importFrom(sf,st_write)
 importFrom(stats,IQR)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
@@ -273,6 +267,7 @@ importFrom(tidyr,spread)
 importFrom(tidyr,unnest)
 importFrom(tidyr,unnest_wider)
 importFrom(tools,file_ext)
+importFrom(tools,file_path_sans_ext)
 importFrom(tools,toTitleCase)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
