--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(calculate_distribution)
 export(calculate_population_in_isochrones_by_race)
 export(calculate_proportion)
 export(check_normality)
-export(clean_npi_entries)
+export(clean_column_unwrap)
 export(clean_phase_2_data)
 export(convert_list_to_df_expanded)
 export(count_physicians_by_group)
@@ -26,6 +26,7 @@ export(create_insurance_by_insurance_scatter_plot)
 export(create_line_plot)
 export(create_region_map)
 export(create_scatter_plot)
+export(create_subspecialty_venn)
 export(determine_direction)
 export(diagnose_mixed_effects_model)
 export(fetch_population_data)
@@ -47,10 +48,16 @@ export(nppes_get_data_for_one_year)
 export(phase0_city_state_assign_scenarios)
 export(phase0_city_state_check_specialty_generalist_counts)
 export(phase0_city_state_sample_specialists)
+export(phase0_clean_npi_entries)
+export(phase0_coalesce)
+export(phase0_convert_state_abbreviations)
+export(phase0_create_academic_column)
 export(phase0_create_sampled_by_region)
 export(phase0_genderize_physicians)
 export(phase0_geocode)
+export(phase0_get_facility_affiliations)
 export(phase0_national_downloadable_file)
+export(phase0_retrieve_clinician_data)
 export(phase0_search_batch_npi)
 export(phase0_search_npi_by_number)
 export(phase0_split_calls_to_lab_assistants_and_save_by_priority)
@@ -64,26 +71,29 @@ export(remove_near_zero_var)
 export(result_section_pairwise_difference)
 export(results_section_analysis_household_income)
 export(results_section_exclusions)
+export(results_section_generate_exclusion_summary)
 export(results_section_medicaid_summary)
 export(results_section_physician_by_household_income)
+export(results_section_poisson_overdispersion_testing)
 export(results_section_summarize_common_provider_info)
 export(results_section_wait_time_median_stats)
 export(results_section_wait_time_poisson_estimates)
 export(save_plot)
 export(save_quality_check_table)
 export(search_npi)
+export(search_npi_by_taxonomy)
 export(states_where_physicians_were_NOT_contacted)
 export(tm_write2pdf)
-export(validate_and_remove_invalid_npi)
-export(validate_and_retrieve_clinician_data)
+export(validate_subspecialty_inputs)
 export(write_output_csv)
+import(arsenal)
 import(assertthat)
 import(dplyr)
 import(effects)
-import(genderdata)
 import(ggplot2)
 import(glue)
 import(logger)
+importFrom(VennDiagram,draw.triple.venn)
 importFrom(arsenal,tableby)
 importFrom(arsenal,write2pdf)
 importFrom(arsenal,write2word)
@@ -103,8 +113,11 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,c_across)
 importFrom(dplyr,case_when)
+importFrom(dplyr,contains)
 importFrom(dplyr,count)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
@@ -118,6 +131,7 @@ importFrom(dplyr,recode)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,row_number)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,setdiff)
@@ -136,6 +150,7 @@ importFrom(fs,dir_create)
 importFrom(fs,dir_exists)
 importFrom(gender,gender)
 importFrom(ggmap,geocode)
+importFrom(ggmap,register_google)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,after_stat)
@@ -181,9 +196,16 @@ importFrom(ggplot2,theme_void)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
+importFrom(glue,glue_collapse)
+importFrom(grid,gpar)
+importFrom(grid,grid.newpage)
+importFrom(grid,grid.text)
+importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,accept)
+importFrom(httr,add_headers)
 importFrom(httr,content)
+importFrom(httr,http_error)
 importFrom(httr,status_code)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
@@ -202,9 +224,7 @@ importFrom(logger,log_warn)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
 importFrom(npi,npi_flatten)
-importFrom(npi,npi_is_valid)
 importFrom(npi,npi_search)
-importFrom(progress,progress_bar)
 importFrom(provider,clinicians)
 importFrom(purrr,keep)
 importFrom(purrr,map)
@@ -213,6 +233,7 @@ importFrom(purrr,map_dbl)
 importFrom(purrr,map_dfc)
 importFrom(purrr,map_dfr)
 importFrom(purrr,map_int)
+importFrom(purrr,safely)
 importFrom(readr,read_csv)
 importFrom(readr,read_rds)
 importFrom(readr,write_csv)
@@ -263,7 +284,9 @@ importFrom(stringr,str_wrap)
 importFrom(tibble,tibble)
 importFrom(tidycensus,get_acs)
 importFrom(tidyr,expand_grid)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,spread)
+importFrom(tidyr,unite)
 importFrom(tidyr,unnest)
 importFrom(tidyr,unnest_wider)
 importFrom(tools,file_ext)
